...
import androidx.compose.ui.semantics.contentDescription
import androidx.compose.ui.semantics.semantics
import androidx.compose.ui.text.input.KeyboardType
import androidx.compose.ui.text.input.PasswordVisualTransformation
import androidx.compose.ui.text.input.VisualTransformation

const val PASS_TEXT_FIELD_TAG = "passTextFieldTag"
const val PASS_REVEAL_ICON_TAG = "revealButtonTag"

@Composable
fun PassTextField(value: String, onValueChanged: (String) -> Unit) {
    var passVisible by remember { mutableStateOf(false) }
    val contentDescription = stringResource(id = R.string.pass_field)
    TextField(
...
